src/features/amUI/users/List.module.css
.listItemContent {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: row;
  font-size: 20px;
  width: 100%;
  gap: 0.5rem;
  padding: 0.5rem 1.25rem;
}

.roleListContainer {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
}

